--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -1,6 +1,5 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +12,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
-        android:background="@color/colorPrimaryDusk"
-        android:backgroundTint="@color/colorPrimaryDusk"
+        android:background="#002f5b"
+        android:backgroundTint="#002f5b"
         card_view:cardCornerRadius="5dp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
