--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="android:textColorPrimary">@color/primaryTextColor</item>
 
         <!-- color of the default background -->
-        <item name="android:windowBackground">@color/backgroundColor</item>
+        <item name="android:windowBackground">@color/colorBlueDark</item>
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
