--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,7 +31,10 @@
 
     <color name="colorBlueLight">#0880b4</color>
     <color name="colorBlueDark">#1b2b43</color>
+    <color name="colorBlue">#002f5b</color>
 
     <color name="colorVioletLight">#492376</color>
     <color name="colorVioletDark">#240e3b</color>
+
+    <color name="pin_normal">#6B767E</color>
 </resources>
